--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,56 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 10px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+* {
+  box-sizing: border-box;
+  max-width: 100%;
+}
+body {
+  background-color: #222;
+}
+input {
+  background-color: transparent;
+  border: 1px solid white;
   color: white;
+  outline: none;
+  padding: 10px;
 }
-
-.App-link {
-  color: #61dafb;
+.taskInp {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 10px;
+  width: 300px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+  height: 100%;
+  background-color: #63bcd5;
+  outline: none;
+  border: none;
+}
+.todos {
+  color: white;
+  width: 300px;
+}
+.todo {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  border: 1px solid #333;
+  padding: 10px;
+  flex-wrap: wrap;
+}
+.todo button {
+  width: 100%;
+  margin-top: 10px;
 }
